fix alignment

--- a/public/style/description.css
+++ b/public/style/description.css
@@ -23,7 +23,7 @@
   /* align-items: center; */
   flex-wrap: wrap;
   width: 100%;
-  padding: 30px;
+  padding: 50px;
 }
 
 .plant-info {
