--- a/public/style/responsive.css
+++ b/public/style/responsive.css
@@ -61,7 +61,6 @@
   }
 
   .plant-detail {
-    padding: 20px;
     max-height: auto;
   }
 
